--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <audio id="myAudio" autoplay="autoplay">
-        <source src="music/nhac.mp3" type="audio/mp3" />
+        <source src="nhac.mp3" type="audio/mp3" />
     </audio>
     <div class="container">
         <img class="paperHeart paperHeart1" style="--time: 0s" src="./img/paperHeart.webp" alt="">
